Fixed scrollable and extra space with UL

--- a/op-it-manager/lesson-07/main.scss
+++ b/op-it-manager/lesson-07/main.scss
@@ -133,15 +133,15 @@
         overflow-x: scroll;
         overflow-y: hidden;
         white-space: nowrap;
-        width: 328px;
+        width: 245px;
         .dv-content {
           flex: 0 0 auto;
           width: 25% !important;
           height: 70px !important;
-          margin-right: 0% !important;
+          margin-right: -2% !important;
           padding: 10px 10px 10px 5px !important;
           ul {
-            margin-left: -8%;
+            margin-left: -20%;
           }
         }
         .triangle-right.dv-dark {
@@ -179,14 +179,20 @@
         overflow-x: scroll;
         overflow-y: hidden;
         white-space: nowrap;
-        width: 232px;
+        width: 195px;
         .dv-content {
           flex: 0 0 auto;
           width: 25% !important;
           height: 70px !important;
-          margin-right: 0% !important;
+          margin-right: -2% !important;
           ul {
-            margin-left: -25%;
+            margin-left: -40%;
+            li {
+              span {
+                position: relative;
+                left: -5px !important;
+              }
+            }
           }
         }
         .triangle-right.dv-dark {
